--- a/exercicios/ex010/index.html
+++ b/exercicios/ex010/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Usando links externos</h1>
-    <p>Você pode acesasr o meu <a href="http://traderlink.com.br" target="_blank" rel="external">site</a></p>
+    <p>Você pode acessar o meu <a href="http://traderlink.com.br" target="_blank" rel="external">site</a></p>
     <h1>Usando link internos</h1>
     <p>Esta é a primeira página do site. Se você quiser, pode acessar também a minha <a href="pag002.html"
             rel="next">segunda página</a>.</p>
