--- a/exercicios/ex017/font01.html
+++ b/exercicios/ex017/font01.html
@@ -8,10 +8,25 @@
     <title>Fontes em CSS</title>
     <style>
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: Arial, sans-serif;
+            /* 
+               Medidas Absolutas: px, cm, mm, in, pt, pc
+               normalmente os browsers usam 16px
+               
+               Medidas Relativas: em, ex, rem, vw, vh %
+               1em = 16px
+            */
+            font-size: 1em;
+            /* lighter normal bold bolder ou de 100-900*/
+            font-weight: normal;
+            font-style: normal;
+            text-decoration: underline;
         }
-        h1, h2 {
-            font-family: 'Times New Roman', Times, serif;
+
+        h1,
+        h2 {            
+            /* shorthand font - font-style > font-weight -> font-size > font-family */
+            font: italic border 3em 'Times New Roman', sans-serif;
         }
     </style>
 </head>
