--- a/exercicios/ex021/caixa02.html
+++ b/exercicios/ex021/caixa02.html
@@ -6,53 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grouping Tags</title>
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: dimgray;
-            margin: 0px;
-        }
-
-        main,
-        header {
-            background-color: white;
-            padding: 10px;
-            margin: 10px;
-        }
-
-        nav {
-            background-color: rgb(102, 102, 102);
-            padding: 3px
-        }
-
-        nav>a {
-            text-decoration: none;
-            color: white;
-            font-weight: bold;
-            margin-right: 10px;
-        }
-
-        nav>a:hover {
-            text-decoration: underline;
-        }
-
-        article {
-            background-color: lightgray;
-            padding: 5px;
-        }
-
-        article>aside {
-            background-color: rgb(165, 165, 165);
-        }
-
-        footer {
-            background-color: black;
-            color: white;
-            text-align: center;
-            padding: 1px;
-            margin: 0px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">    
 </head>
 
 <body>
@@ -90,7 +44,7 @@
     <footer>
         <p>Desenvolvido por Fernando Link</p>
     </footer>
-
+    <div id="bola"></div>
 </body>
 
 </html>
