--- a/exercicios/ex021/caixa03.html
+++ b/exercicios/ex021/caixa03.html
@@ -9,9 +9,13 @@
         h1 {
             border: 9px solid black;
             padding: 10px;
+
+            /* 
             border-image-source: url('borda.png');
             border-image-slice: 27;
-            border-image-repeat: repeat;
+            border-image-repeat: repeat; */
+
+            border-image: url('borda.png') 27 repeat;
         }
     </style>
 </head>
