--- a/desafios/d010/android.html
+++ b/desafios/d010/android.html
@@ -40,7 +40,7 @@
                 Ele
                 conta que abriu o <a href="https://inkscape.org/pt-br/" target="_blank">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de
                 robô.
-                O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação
+                O objetivo era apenas personificar o sistema apenas para a sua equipe, não existia nenhuma solicitação
                 da
                 empresa para a criação de um mascote.
             </p>
@@ -114,7 +114,7 @@
                     usar numerações, o que deu origem ao Android 10.
                 </p>
                 <p>
-                    Acesse aqui o site <a href="https://www.android.com/intl/en_uk/history" target="_blank">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada
+                    Acesse aqui o site <a href="https://www.android.com/intl/en_uk/history" target="_blank">Android History</a> para conhecer a sequência das versões "adoçicadas" e o que cada
                     uma
                     trouxe para o sistema <strong>Android</strong>.
                 </p>
