--- a/desafios/d010/android.html
+++ b/desafios/d010/android.html
@@ -26,7 +26,8 @@
             <h1>História do Mascote do Android</h1>
 
             <p>
-                Provavelmente você sabe que o sistema operacional <strong>Android</strong>, mantido pelo <strong>Google</strong> é um dos mais utilizados
+                Provavelmente você sabe que o sistema operacional <strong>Android</strong>, mantido pelo
+                <strong>Google</strong> é um dos mais utilizados
                 para
                 dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e
                 uma
@@ -36,45 +37,57 @@
             <h2>A primeira versão</h2>
 
             <p>
-                A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank">Dan Morrill</a>.
+                A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a
+                    href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/"
+                    target="_blank">Dan Morrill</a>.
                 Ele
-                conta que abriu o <a href="https://inkscape.org/pt-br/" target="_blank">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de
+                conta que abriu o <a href="https://inkscape.org/pt-br/" target="_blank">Inkscape</a> (software livre
+                para vetorização de imagens) e criou sua própria versão de
                 robô.
                 O objetivo era apenas personificar o sistema apenas para a sua equipe, não existia nenhuma solicitação
                 da
                 empresa para a criação de um mascote.
             </p>
 
-            <img src="images/dan-droids.png" alt="Primeiro mascote do Android">
+            <picture>
+                <source media="(max-width: 670px)" srcset="images/dan-droids-pq.png">
+                <img src="images/dan-droids.png" alt="Primeiro mascote do Android">
+            </picture>
 
-            <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>.</p>
+            <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os
+                <strong>Dandroids</strong>.</p>
 
             <h2>Surge um novo mascote</h2>
 
             <p>
                 A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A
-                ilustradora Russa <a href="https://www.irinablok.com/" target="_blank">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno
+                ilustradora Russa <a href="https://www.irinablok.com/" target="_blank">Irina Blok</a>, também
+                funcionária do Google, ficou com a missão de representar o pequeno
                 robô
                 de uma maneira mais agradável.
             </p>
-
-            <img src="images/irina-blok.jpg" alt="Irina Blok, criadora do Bugdroid">
-
+            <picture>
+                <source media="(max-width: 670px)" srcset="images/irina-blok-pq.jpg">
+                <img src="images/irina-blok.jpg" alt="Irina Blok, criadora do Bugdroid">
+            </picture>
 
             <p>
                 A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada.
                 O
-                desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo
+                desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o
+                <strong>Bugdroid</strong>, o novo
                 mascote
                 do Android.
             </p>
 
-            <img src="images/bugdroid.png" alt="Bugdroid">
+            <img src="images/bugdroid.png" class="pequena" alt="Bugdroid">
 
             <p>
-                A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que ilustram portas de
+                A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que
+                ilustram portas de
                 banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no
-                escritório do <strong>Google</strong> e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo,
+                escritório do <strong>Google</strong> e olhou para o lado dos banheiros e a identificação foi imediata:
+                simples, limpo,
                 objetivo.
             </p>
 
@@ -108,20 +121,23 @@
                     <li>9.0 - <abbr title="Torta">Pie</abbr></li>
                 </ul>
                 <p>
-                    Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr fim a essa divertida prática e
+                    Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr fim a essa
+                    divertida prática e
                     começou
                     a
                     usar numerações, o que deu origem ao Android 10.
                 </p>
                 <p>
-                    Acesse aqui o site <a href="https://www.android.com/intl/en_uk/history" target="_blank">Android History</a> para conhecer a sequência das versões "adoçicadas" e o que cada
+                    Acesse aqui o site <a href="https://www.android.com/intl/en_uk/history" target="_blank">Android
+                        History</a> para conhecer a sequência das versões "adoçicadas" e o que cada
                     uma
                     trouxe para o sistema <strong>Android</strong>.
                 </p>
             </aside>
 
             <p>
-                Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema <strong>Android</strong>
+                Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema
+                <strong>Android</strong>
                 e
                 seu simpático mascote.
             </p>
