--- a/exercicios/ex017/font02.html
+++ b/exercicios/ex017/font02.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>alinhamentos</title>
+    <title>Alinhamentos</title>
     <style>
         body {
             font: normal 16px Arial, Verdana, serif;
